<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95F7FD"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/teams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="196dp">

            <LinearLayout
                android:id="@+id/team_A"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/first_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/team_a"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/score_a"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/addPointTeamOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:background="@drawable/button_color"
                    android:text="@string/add_point"
                    android:textColor="#000000" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="11dp"
                android:layout_height="568dp">


                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/team_B"
                android:layout_width="0dp"
                android:layout_height="201dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/second_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/team_b"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/score_b"
                    android:textColor="#000000"
                    android:textSize="56sp" />


                <Button
                    android:id="@+id/addPointTeamTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:background="@drawable/button_color"
                    android:text="@string/add_point"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/enterMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/enter_minutes"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="#000000"
            android:textColorHint="#9E9E9E"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/resetButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:background="@drawable/button_color"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/finishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="32dp"
            android:text="@string/finish"
            android:textColor="#000000">

        </Button>

        <Button
            android:id="@+id/startTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_color"
            android:padding="10dp"
            android:text="@string/start"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/countdownText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/timer"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>